<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>opennars</groupId>
        <artifactId>opennars</artifactId>
        <version>1.7-SNAPSHOT</version>
    </parent>
    <artifactId>opennars-util</artifactId>
    <packaging>jar</packaging>

    <name>OpenNARS Util</name>
    <url>https://github.com/opennars/opennars</url>


    <scm>
        <connection>scm:git:${project.url}.git</connection>
        <developerConnection>scm:git:${project.url}.git</developerConnection>
        <url>${project.url}</url>
        <tag>HEAD</tag>
    </scm>

    <build>
        <finalName>opennars_util_${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <!--<useIncrementalCompilation>true</useIncrementalCompilation>-->
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.18.1</version>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>

        </plugins>
    </build>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    </properties>


    <dependencies>
        <dependency>
            <groupId>com.goldmansachs</groupId>
            <artifactId>gs-collections</artifactId>
        </dependency>

        <!-- grappa -->
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm-debug-all</artifactId>
            <version>5.0.4</version>
        </dependency>
        <dependency>
            <groupId>me.qmx.jitescript</groupId>
            <artifactId>jitescript</artifactId>
            <version>0.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.9.4</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.ant</groupId><artifactId>ant</artifactId></exclusion>
                <exclusion><groupId>com.google.inject</groupId><artifactId>guice</artifactId></exclusion>
                <exclusion>    <groupId>junit</groupId><artifactId>junit</artifactId></exclusion>
                <exclusion><groupId>org.beanshell</groupId><artifactId>bsh</artifactId></exclusion>
                <exclusion>    <groupId>org.yaml</groupId><artifactId>snakeyaml</artifactId></exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>2.0.26-beta</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>2.0.0</version>
            <scope>test</scope>
        </dependency>




        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.module</groupId>
            <artifactId>jackson-module-jsonSchema</artifactId>
        </dependency>

        <dependency>
            <groupId>org.javassist</groupId>
            <artifactId>javassist</artifactId>
        </dependency>

        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>


        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
        </dependency>
        <dependency>
            <groupId>org.javolution</groupId>
            <artifactId>javolution-core-java</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.osgi</groupId>
                    <artifactId>org.osgi.core</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.osgi</groupId>
                    <artifactId>org.osgi.compendium</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.javabits.jgrapht</groupId>
            <artifactId>jgrapht-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.javabits.jgrapht</groupId>
            <artifactId>jgrapht-ext</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.tinyjee.jgraphx</groupId>
                    <artifactId>jgraphx</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!--<dependency>-->
        <!--<groupId>net.openhft</groupId>-->
        <!--<artifactId>collections</artifactId>-->
        <!--<exclusions>-->
        <!--<exclusion>-->
        <!--<artifactId>annotations</artifactId>-->
        <!--<groupId>org.kohsuke.jetbrains</groupId>-->
        <!--</exclusion>-->
        <!--</exclusions>-->
        <!--</dependency>-->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>


        <dependency>
            <groupId>org.infinispan</groupId>
            <artifactId>infinispan-embedded</artifactId>
            <version>8.0.0.Beta2</version>
            <!--<exclusions>-->
                <!--<exclusion>-->
                    <!--<groupId>org.infinispan</groupId>-->
                    <!--<artifactId>infinispan-cachestore-leveldb</artifactId>-->
                <!--</exclusion>-->
                <!--<exclusion>-->
                    <!--<groupId>org.fusesource.leveldbjni</groupId>-->
                    <!--<artifactId>leveldbjni-all</artifactId>-->
                <!--</exclusion>-->
            <!--</exclusions>-->
        </dependency>


        <!--<dependency>-->
            <!--<groupId>com.tinkerpop.blueprints</groupId>-->
            <!--<artifactId>blueprints-core</artifactId>-->
            <!--<version>2.6.0</version>-->
        <!--</dependency>-->
    </dependencies>


</project>

